--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/swagger-ui-react": "^5.18.0",
     "next": "15.2.5",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "swagger-ui-react": "^5.20.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
