--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swagger-ui-express": "^5.0.1",
-    "swagger-ui-react": "^5.20.8"
+    "swagger-ui-react": "^5.20.8",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
