--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/swagger-ui-react": "^5.18.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.523.0",
     "next": "15.2.5",
+    "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "swagger-ui-express": "^5.0.1",
     "swagger-ui-react": "^5.20.8",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -35,6 +45,7 @@
     "jest-mock-extended": "^4.0.0-beta1",
     "tailwindcss": "^4",
     "ts-jest": "^29.3.2",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
