--- a/package.json
+++ b/package.json
@@ -11,42 +11,42 @@
     "test": "jest"
   },
   "dependencies": {
-    "@prisma/client": "^6.12.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@prisma/client": "^6.16.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/swagger-ui-react": "^5.18.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.528.0",
-    "next": "15.4.4",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
-    "prisma": "^6.12.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "sonner": "^2.0.6",
+    "prisma": "^6.16.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
     "swagger-ui-express": "^5.0.1",
-    "swagger-ui-react": "^5.27.0",
+    "swagger-ui-react": "^5.29.1",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.10"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "eslint": "^9",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
+    "eslint": "^9.36.0",
     "eslint-config-next": "15.4.4",
-    "jest": "^30.0.5",
+    "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
-    "tailwindcss": "^4",
-    "ts-jest": "^29.4.0",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.13",
+    "ts-jest": "^29.4.4",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.2"
   }
 }
